Introduce mode-specific pipeline validators and enhance validation tests
- Add `ProductionPipelineConfigValidator`, `DesignPipelineConfigValidator`, and `TestingPipelineConfigValidator` for distinct validation modes.
- Refactor `PipelineValidatorProducer` to use dedicated implementations for each validation mode.
- Update `CompositeValidator` to handle mode-specific behavior (e.g., warnings as errors in PRODUCTION).
- Extend `MockPipelineGenerator` with test-specific pipeline scenarios.
- Add `ValidationTestHelper` to reduce duplication in test utilities.
- Create comprehensive test suites: `ProductionValidationTest`, `DesignValidationTest`, and `TestingValidationTest` to verify behavior in each mode.